Changelog
=========

1.3 - Unreleased
----------------

* Update z3cform dependency to plone.app.z3cform, and add include it's 
  configuration in configure.zcml.
  [mj]

1.2 - 2009-03-20
----------------

* Fixed adding new entries after the editing fix.
  [mj]

1.1 - 2009-03-17
----------------

* Fixed editing existing entries.
  [mj]

1.0 - 2009-03-17
----------------

* Initial release
  [mj]
